package ch.heigvd.api;

import java.util.ArrayList;

public class Group {

    private String sender;
    private ArrayList<Victim> victims;

}
