package ch.heigvd.api;

public class Mail {

    private String from;

    private String to;

    private String date;

    private Message message;

    private Group groupe;

    private String sender;




}
