package ch.heigvd.api;

public class Message {
    private String subject;
    private String body;
}
