package ch.heigvd.api;

public class Prank {
   private String prank;
   private Group group;
   private Message message;

   public void getMessageFromConfigFiles() {
       return;
   }
   public void getGroupFromConfigFiles() {

   }
}
