package ch.heigvd.api;

import java.io.File;
import java.nio.charset.Charset;

public class Victim {
    private String emails;

    public Victim(String email) {
        this.email = email;
    }

    



}
